# runbox

./: .gitignore  Cargo.toml  NPM_PUBLISH.md  README.md  ROADMAP.md  TECHNICAL_DOCS.md  WASM_SETUP.md  build.mjs  force-update-demo.ps1  force-update-simple.ps1  log1.txt  log2.txt  log_tarpaulin.txt  pkg-template.json  rebuild-and-update-demo.ps1  update-demo-force.ps1  update-demo-simple.ps1
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: core_bench.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  MCP_GUIDE.md  TERMINAL_API.md  TERMINAL_ARCHITECTURE.md  WEBCONTAINER_COMPARISON.md
examples/: terminal_demo.rs
skills/: AGENT_SKILL.md
src/: auth.rs  bundler.rs  cache.rs  console.rs  deploy.rs  error.rs  hotreload.rs  inspector.rs  lib.rs  lsp.rs  main.rs  network.rs  plugin.rs  preview.rs  process.rs  sandbox.rs  security.rs  session.rs  shell.rs  terminal.rs  terminal_api.rs  vfs.rs  wasm.rs  wasm_opt.rs  websocket.rs
src/ai/: mod.rs  skills.rs  tools.rs
src/mcp/: client.rs  mod.rs  protocol.rs  registry.rs  server.rs  transport.rs
src/runtime/: bun.rs  deno.rs  git.rs  js_engine.rs  mod.rs  npm.rs  python.rs  shell_builtins.rs
src/runtime/js_engine/: polyfills.rs  typescript.rs
test/: README.md  run_suite.ps1
test-app/: README.md  index.html  package.json  vite.config.js
test-app/src/: app.js  counter.js  executor.js  main.js  project.js  stats.js  styles.css  ui.js
tests/: expected_behaviors.rs  runtime_matrix.rs
