[package]
name = "runbox"
version = "0.3.6"
edition = "2024"

[lib]
# Necesario para wasm-pack (WASM) y para reutilizar el crate en nativo.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialización
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Manejo de errores
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"

# Git — hashing SHA1 para objetos
sha1_smol = "1"

# Tiempo
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Compresión y archivado — puro Rust, funciona en WASM y nativo
flate2 = "1"
tar    = "0.4"

# WASM bindings
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
web-sys = { version = "0.3", features = [
  "console", "Window", "ServiceWorker",
  "WebSocket", "MessageEvent", "EventSource",
  "Request", "RequestInit", "Response", "Headers",
  "XmlHttpRequest",
]}

# Build nativo (tests, CLI, MCP server)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio              = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest            = { version = "0.12", features = ["blocking", "json"] }
tempfile           = "3"
tungstenite        = "0.24"
# Motor JS para native sin bun (intérprete puro Rust)
boa_engine         = "0.19"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "core_bench"
harness = false
